fixed bug with z-index

--- a/src/components/displayCells.module.css
+++ b/src/components/displayCells.module.css
@@ -1,6 +1,6 @@
 .cellDescription {
     position: relative;
-    z-index: 232332;
+    z-index: 23;
     padding-top: 60px;
     padding-left: 20px;
     list-style: decimal;
